인트로 애니메이션 로직 수정, 스크롤 애니메이션 구현 진행중

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
-  <script src="./js/ani-script.js"></script>
+  <!-- <script src="./js/ani-script.js"></script> -->
   <script src="./js/script.js"></script>
 </head>
 
@@ -46,7 +46,7 @@
               <a href="#"><i class="hidden">Pine is Fine!</i></a>
             </h1>
             <ul class="gnb">
-              <li class="active"><a href="#section0"><b>intro</b></a></li>
+              <li><a href="#section0"><b>intro</b></a></li>
               <li><a href="#section1"><b>about</b></a></li>
               <li><a href="#section2"><b>portfolio</b></a></li>
               <li><a href="#section3"><b>contact</b></a></li>
@@ -65,7 +65,10 @@
             <!-- intro 영상 삽입 -->
             <div class="visual-con">
               <span>00</span>
-              <h2>2024 <strong>Portfolio</strong></h2>
+              <h2>
+                2024 <strong>Portfolio</strong>
+                <b></b>
+              </h2>
 
 
               <div class="ani-wrap">
