그래픽 섹션 모달 창, 취소 버튼 아직 미구현

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Pine is Fine!</title>
 
   <link rel="stylesheet" href="./css/aos.css">
+
+
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/reset.css">
@@ -34,6 +36,15 @@
       <video src="./img/intro-ani.mp4" muted autoplay playsinline></video>
     </div>
     <button type="button" class="btn-skip">Click to Skip</button>
+  </div>
+
+  <!-- Portfolio Graphic Gallery -->
+  <div class="dim"></div>
+  <div class="popup">
+    <div class="graphic-con">
+      <figure></figure>
+    </div>
+    <button type="button" class="btn-close"><i class="hidden">닫기</i></button>
   </div>
 
   <!-- nav가 상단이 아니라 사이드에 있어도 Header로 잡는지? -->
@@ -689,6 +700,8 @@
   </div>
 
   <!-- // e : main -->
+
+  <div class="cursor"></div>
 </body>
 
 </html>
