모달 취소 버튼 구현, 서브 페이지 인트로작성, 탑버튼 구현

--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
   <!-- // e : main -->
 
   <div class="cursor"></div>
+  <button type="button" class="btn-top"><i class="hidden">TOP</i></button>
 </body>
 
 </html>
