--- a/project-con/1-samsonite.html
+++ b/project-con/1-samsonite.html
@@ -38,11 +38,11 @@
             </h1>
             <ul class="project-gnb">
               <li class="active"><a href="./1-samsonite.html"><b>쌤소나이트 공식 온라인몰</b></a></li>
-              <li><a href="../index.html#section1"><b>Melody Mangroove</b></a></li>
-              <li><a href="../index.html#section2"><b>COEX Aquarium</b></a></li>
-              <li><a href="../index.html#section3"><b>Portfolio Site</b></a></li>
-              <li><a href="../index.html#section3"><b>Toy Story4 MicroSite</b></a></li>
-              <li><a href="../index.html#section3"><b>Joe's Breath</b></a></li>
+              <li><a href="./2-melody-mangroove.html"><b>Melody Mangroove</b></a></li>
+              <li><a href="./3-coex-aquarium.html"><b>COEX Aquarium</b></a></li>
+              <li><a href="./4-portfolio-site.html"><b>Portfolio Site</b></a></li>
+              <li><a href="./5-toystory-microsite.html"><b>Toy Story4 MicroSite</b></a></li>
+              <li><a href="./6-joe's-breath.html"><b>Joe's Breath</b></a></li>
             </ul>
           </nav>
         </div>
@@ -52,15 +52,49 @@
       <!-- s : main -->
       <div class="main-wrap">
         <main id="container">
+          <section class="project-intro" style="background-image: url(../project-img/01-thumb.png);">
+            <div class="inner">
+              <div class="info">
+                <div class="title-wrap">
+                  <div class="title">
+                    <h2 data-url="../project-img/01-logo.svg"><i class="hidden">logo</i></h2>
+                    <p>쌤소나이트 공식 온라인몰 <span>: 리디자인</span></p>
+                    <p>1인 프로젝트</p>
+                  </div>
+                  <a href="https://rsa7937.github.io/samsonite/" target='_blank' data-color="#10255A">View Website</a>
+                </div>
+                <div class="detail">
+                  <div class="detail-title">
+                    <strong>PROJECT.</strong>
+                    <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                  </div>
+                  <div class="detail-period">
+                    <strong>PERIOD.</strong>
+                    <p>2024.03.27 -</p>
+                  </div>
+                  <div class="detail-tool">
+                    <strong>TOOL.</strong>
+                    <ul>
+                      <li><i class="hidden">Figma</i></li>
+                      <li><i class="hidden">Illustrator</i></li>
+                      <li><i class="hidden">Visual Studio Code</i></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
           <section class="processpage">
             <figure>
-              <img src="../project-img/pp-samsonite.png" alt="쌤소나이트 프로세스 페이지">
+              <img src="../project-img/01-processpage.png" alt="쌤소나이트 프로세스 페이지">
             </figure>
           </section>
         </main>
       </div>
     </div>
   </div>
+
+  <button type="button" class="btn-top sub-top"><i class="hidden">TOP</i></button>
   <script>
     $(function () {
       // gsap.set('.processpage figure img', { autoAlpha: 0 })
@@ -76,6 +110,7 @@
       })
     })
   </script>
+
 </body>
 
 </html>
