프로그램 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -337,22 +337,22 @@
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-vscode"><i class="hidden">Visual Studio Code</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -369,27 +369,28 @@
                                 <strong>Melody Mangroove</strong>
                               </div>
                               <div class="project-tag-list">
-                                <span class="tag">반응형</span>
-                                <span class="tag">리디자인</span>
-                                <span class="tag">1인 프로젝트</span>
+                                <span class="tag">기획</span>
+                                <span class="tag">디자인</span>
+                                <span class="tag">앱 서비스</span>
+                                <span class="tag">팀 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>멜로디 맨그로브 : 앱 서비스 기획 및 디자인</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 04. 28 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -411,22 +412,22 @@
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -448,22 +449,22 @@
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -485,22 +486,22 @@
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -522,22 +523,22 @@
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
-                                <dl>
-                                  <dt>PROJECT.</dt>
-                                  <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
-                                </dl>
-                                <dl>
-                                  <dt>PERIOD.</dt>
-                                  <dd>2024. 03. 24 - 2024. 05. 28</dd>
-                                </dl>
-                                <dl>
-                                  <dt>TOOL.</dt>
-                                  <dd>
-                                    <span><i class="hidden">Figma</i></span>
-                                    <span><i class="hidden">Illustrator</i></span>
-                                    <span><i class="hidden">Visual Studio Code</i></span>
-                                  </dd>
-                                </dl>
+                                <div>
+                                  <strong>PROJECT.</strong>
+                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                </div>
+                                <div>
+                                  <strong>PERIOD.</strong>
+                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                </div>
+                                <div>
+                                  <strong>TOOL.</strong>
+                                  <ul>
+                                    <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                  </ul>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -556,9 +557,9 @@
                           </a>
                         </div>
                         <div class="swiper-slide">
-                          <a href="#">
+                          <a href="./project-con/2-melody-mangroove.html">
                             <figure>
-                              <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                              <img src="./img/project-thumb-02.png" alt="Melody-mangroove">
                             </figure>
                           </a>
                         </div>
