--- a/project-con/2-melody-mangroove.html
+++ b/project-con/2-melody-mangroove.html
@@ -52,30 +52,61 @@
       <!-- s : main -->
       <div class="main-wrap">
         <main id="container">
+          <section class="project-intro" style="background-image: url(../project-img/02-thumb.png);">
+            <div class="inner">
+              <div class="info">
+                <div class="title-wrap">
+                  <div class="title">
+                    <h2 class="project02-logo"><i class="hidden">logo</i></h2>
+                    <p>멜로디 맨그로브<span>: 앱 서비스 기획 및 디자인</span></p>
+                    <p>팀 프로젝트</p>
+                  </div>
+                  <a href="https://www.figma.com/proto/NjAo27M2zCvlJBPJC6OHr0/Melody-Mangrove?page-id=450%3A6583&node-id=2020-10478&viewport=-549%2C497%2C0.14&t=q59CdzRrPFPXWOlJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2249%3A8359&show-proto-sidebar=1"
+                    target='_blank' data-color="#10255A" class="project02-color">View ProtoType</a>
+                </div>
+                <div class="detail">
+                  <div class="detail-title">
+                    <strong>PROJECT.</strong>
+                    <p>Melody Mangroove 앱 서비스 기획 및 디자인</p>
+                  </div>
+                  <div class="detail-period">
+                    <strong>PERIOD.</strong>
+                    <p>2024. 04. 28 - 2024. 05. 28</p>
+                  </div>
+                  <div class="detail-tool detail-tool-">
+                    <strong>TOOL.</strong>
+                    <ul>
+                      <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
+                      <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                      <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
           <section class="processpage">
             <figure>
-              <img src="../project-img/pp-samsonite.png" alt="쌤소나이트 프로세스 페이지">
+              <img src="../project-img/01-processpage.png" alt="쌤소나이트 프로세스 페이지">
             </figure>
           </section>
         </main>
       </div>
     </div>
   </div>
+
+  <button type="button" class="btn-top sub-top"><i class="hidden">TOP</i></button>
   <script>
     $(function () {
       // gsap.set('.processpage figure img', { autoAlpha: 0 })
       $(window).on('load', () => {
         const projectTL = gsap.timeline();
-        projectTL.from('.processpage figure img', { autoAlpha: 0, duration: 2, ease: "power4.inOut" })
-        projectTL.from('.processpage figure img', { yPercent: 100, duration: 1.5, ease: "power4.inOut" }, '<')
-      })
-      $('.logo').on('click', () => {
-        $('.logo-ani-wrap').css('display', 'none')
-        loadTL.seek('end');
-        window.location.href = '../index.html';
+        projectTL.from('.main-wrap', { autoAlpha: 0, duration: 2, ease: "power4.inOut" })
+        projectTL.from('.main-wrap', { yPercent: 100, duration: 1.5, ease: "power4.inOut" }, '<')
       })
     })
   </script>
+
 </body>
 
 </html>
