--- a/text.html
+++ b/text.html
@@ -2,171 +2,55 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Swiper demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-  <!-- Demo styles -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gradient Border with CSS Variables</title>
   <style>
-    html,
-    body {
+    :root {
+      --primary-color: #ff7f50;
+      /* Coral */
+      --secondary-color: #1e90ff;
+      /* DodgerBlue */
+    }
+
+    .gradient-border {
       position: relative;
-      height: 100%;
-    }
-
-    body {
-      background: #eee;
-      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      color: #000;
-      margin: 0;
-      padding: 0;
-    }
-
-    .swiper-wrap {
-      width: 50%;
-      height: 900px;
-    }
-
-    .swiper {
-      width: 100%;
-      height: 100%;
-    }
-
-
-    .swiper-slide {
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      width: 200px;
+      height: 200px;
       text-align: center;
-      font-size: 18px;
-      /* background: #fff; */
-      height: 500px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      /* padding: 30px 20px; */
-      height: 300px !important;
-      border: 1px solid #000;
-
-
-      transition: 0.4s;
+      line-height: 160px;
+      font-size: 1.5em;
+      font-weight: bold;
+      color: #333;
     }
 
-
-    .swiper-slide.swiper-slide-active {
-      height: 400px !important;
-      background: #ff5;
-    }
-
-    .inner {
-      width: 90%;
-      height: 90%;
-      border: 1px solid #000;
-      background: rgba(255, 255, 0, 0.2);
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    #wrapper {
-      width: 100%;
-      margin-top: 50px;
-      margin-left: 50px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: distribute;
-      justify-content: space-around;
-      flex-wrap: wrap;
-    }
-
-    .container {
-      margin-top: 20px;
-      margin-left: 20px;
-    }
-
-    /*Flip card animation on hover*/
-
-    .flip-card-container {
-      background-color: transparent;
-      transform: translate3d(0, 0, 0);
-      width: 300px;
-      height: 300px;
-      perspective: 1000px;
-    }
-
-    .flip-card-inner {
-      width: 300px;
-      height: 300px;
-      transform-style: preserve-3d;
-      transition: transform .5s;
-      /*This container will be transformed*/
-    }
-
-    .flip-card-front,
-    .flip-card-back {
+    .gradient-border::before {
+      content: "";
       position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-    }
-
-    .flip-card-front {
-      background-color: purple;
-    }
-
-    .flip-card-back {
-      background-color: black;
-      transform: rotateY(180deg);
-      color: #fff;
-    }
-
-    .flip-card-container:hover .flip-card-inner {
-      transform: rotateY(180deg);
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+      z-index: -1;
+      border-radius: inherit;
+      mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      mask-composite: exclude;
+      -webkit-mask-composite: xor;
     }
   </style>
 </head>
 
 <body>
-  <div id="wrapper">
-    <div class="flip-card-container container">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">Hello</div>
-        <div class="flip-card-back">Goodbye</div>
-      </div>
-    </div>
-  </div>
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      direction: "vertical",
-      slidesPerView: 3,
-      loop: true,
-      autoplay: {
-
-      },
-      centeredSlides: true,
-
-
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-    });
-  </script>
+  <div class="gradient-border">Gradient Border</div>
 </body>
 
 </html>
