포트폴리오 폼 대략적인 완성

--- a/project-con/1-samsonite.html
+++ b/project-con/1-samsonite.html
@@ -52,7 +52,7 @@
       <!-- s : main -->
       <div class="main-wrap">
         <main id="container">
-          <section class="project-intro" style="background-image: url(../project-img/01-thumb.png);">
+          <section class="project-intro" style="background-image: url(../project-img/01-thumb.webp);">
             <div class="inner">
               <div class="info">
                 <div class="title-wrap">
