--- a/project-con/2-melody-mangroove.html
+++ b/project-con/2-melody-mangroove.html
@@ -52,7 +52,7 @@
       <!-- s : main -->
       <div class="main-wrap">
         <main id="container">
-          <section class="project-intro" style="background-image: url(../project-img/02-thumb.png);">
+          <section class="project-intro" style="background-image: url(../project-img/02-thumb.webp);">
             <div class="inner">
               <div class="info">
                 <div class="title-wrap">
@@ -62,7 +62,7 @@
                     <p>팀 프로젝트</p>
                   </div>
                   <a href="https://www.figma.com/proto/NjAo27M2zCvlJBPJC6OHr0/Melody-Mangrove?page-id=450%3A6583&node-id=2020-10478&viewport=-549%2C497%2C0.14&t=q59CdzRrPFPXWOlJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2249%3A8359&show-proto-sidebar=1"
-                    target='_blank' data-color="#10255A" class="project02-color">View ProtoType</a>
+                    target='_blank' class="project02-color">View ProtoType</a>
                 </div>
                 <div class="detail">
                   <div class="detail-title">
@@ -87,7 +87,7 @@
           </section>
           <section class="processpage">
             <figure>
-              <img src="../project-img/01-processpage.png" alt="쌤소나이트 프로세스 페이지">
+              <img src="../project-img/02-processpage.png" alt="Melody-mangroove 프로세스 페이지">
             </figure>
           </section>
         </main>
