target _blank 추가

--- a/index.html
+++ b/index.html
@@ -550,14 +550,14 @@
                     <div class="swiper project-img">
                       <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                          <a href="./project-con/1-samsonite.html">
+                          <a href="./project-con/1-samsonite.html" target="_blank">
                             <figure>
                               <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
                             </figure>
                           </a>
                         </div>
                         <div class="swiper-slide">
-                          <a href="./project-con/2-melody-mangroove.html">
+                          <a href="./project-con/2-melody-mangroove.html" target="_blank">
                             <figure>
                               <img src="./img/project-thumb-02.png" alt="Melody-mangroove">
                             </figure>
