--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <section id="section0" class="visual">
             <div class="visual-video">
               <!-- intro 영상 삽입 -->
+              <video src="./img/total.webm" paused muted loop></video>
               <div class="visual-con">
                 <span>00</span>
                 <h2>
@@ -156,15 +157,19 @@
                         <strong>Education</strong>
                         <dl>
                           <dt>2016 - 2023</dt>
-                          <dd>Lorem ipsum dolor sit amet consectetur.</dd>
+                          <dd>이화여자대학교 융합콘텐츠학과 졸업</dd>
+                        </dl>
+                        <dl>
+                          <dt>2018. 04-08</dt>
+                          <dd>일본 中央大学 교환학생</dd>
                         </dl>
                       </div>
                       <div class="experience">
                         <strong>Experience</strong>
                         <dl>
                           <dt>2020 - 2022</dt>
-                          <dd>Lorem ipsum dolor sit amet. <br>
-                            Lorem ipsum dolor sit amet consectetur.</dd>
+                          <dd>주식회사 비커즈 디자이너<br>
+                            어플리케이션 서비스 [조이의 숨] 기획 및 디자인</dd>
                         </dl>
                       </div>
                     </div>
@@ -172,16 +177,16 @@
                       <div class="award">
                         <strong>Award</strong>
                         <dl>
-                          <dt>2020</dt>
-                          <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                          <dt>2017</dt>
+                          <dd>신산업융합 창의・창업 프로젝트 경진대회 우수</dd>
                         </dl>
                         <dl>
-                          <dt>2020</dt>
-                          <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                          <dt>2018</dt>
+                          <dd>제3회 CED CAMPUS CREATIVE GRANT OLYMPIAD</dd>
                         </dl>
                         <dl>
-                          <dt>2020</dt>
-                          <dd>Lorem ipsum dolor sit amet consectetur adipisicing. </dd>
+                          <dt>2019</dt>
+                          <dd>신산업융합 창의・창업 프로젝트 경진대회 장려</dd>
                         </dl>
                       </div>
                     </div>
@@ -259,10 +264,10 @@
                     <!-- 카드 호버시 나오는 텍스트 -->
                     <div class="card-detail">
                       <div class="inner">
-                        <strong>Title</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis
-                          exercitationem
-                          repellat impedit soluta minima eum, facilis nam quo!</p>
+                        <strong>항상 위로 <br>
+                          성장하는 디자이너</strong>
+                        <p>소나무가 하늘을 향해 끝없이 뻗어나가듯, 저는 새로운 기술과 트렌드에 꾸준히 관심을 기울이며 배우고 있습니다. 이를 바탕으로 반짝이는 아이디어를 구현하며 지속적으로
+                          성장하는 디자이너입니다.</p>
                       </div>
                     </div>
                   </li>
