로티 추가했다!!"

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@barba/core"></script>
   <!-- <script src="./js/ani-script.js"></script> -->
+  <script src="./js/lottie.min.js"></script>
   <script src="./js/script.js"></script>
 </head>
 
@@ -33,7 +34,7 @@
   <!-- 사이트 최초 진입시 보이는 애니메이션 -->
   <div class="logo-ani-wrap">
     <div class="logo-ani">
-      <video src="./img/intro-ani.mp4" muted autoplay playsinline></video>
+      <video src="./img/logo-white.mp4" muted autoplay playsinline></video>
     </div>
     <button type="button" class="btn-skip">Click to Skip</button>
   </div>
@@ -674,9 +675,16 @@
               <div class="contact-wrap">
                 <div class="contact-pic">
                   <!-- 영상으로 할지 이미지로 할지 아직 결정하지 못함 -->
-                  <figure>
+                  <!-- <figure>
                     <img src="" alt="">
-                  </figure>
+                  </figure> -->
+                  <div id="lottie-tree"></div>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
                 </div>
                 <div class="contact-text">
                   <div class="contact-text-wrap">
