--- a/project-con/2-melody-mangroove.html
+++ b/project-con/2-melody-mangroove.html
@@ -22,6 +22,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@barba/core"></script>
+  <script src="../js/lottie.min.js"></script>
+
   <!-- <script src="./js/ani-script.js"></script> -->
   <script src="../js/script.js"></script>
 </head>
